App: Relaunch fixes & GC tweaks.